ISPN-10310 Make StateConsumerImpl non-blocking